# multi_subset_bam

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
testData/: .gitignore  barcodes.txt  barcodes2.txt  test.bam
testData/outpath/: barcodes.bam
tests/: test_program.rs
