[package]
name = "multi_subset_bam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bam = "*"
clap = { version = "3.0.14", features = ["derive"] }
indicatif = {version = "*", features = ["rayon"]}

