[package]
name = "multi_subset_bam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bam = "*"
clap = { version = "4", features = ["derive"] }
indicatif = {version = "*", features = ["rayon"]}
rayon = "1.5"
num_cpus = "1.13"  # Or the latest version